--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodejs_postgres": "file:",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3"
   }
 }
